--- a/wireguard-vpn-template.yaml
+++ b/wireguard-vpn-template.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: "Deploy a fully configured WireGuard VPN server on AWS, ready for client connections."
+Description: "Deploy a fully configured WireGuard VPN server on AWS, ready for client connections, with support for seamless dynamic updates to client configurations."
 
 Parameters:
   VpcId:
