--- a/cloudformation-test-vpc-template.yaml
+++ b/cloudformation-test-vpc-template.yaml
@@ -1,16 +1,13 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: VPC with 2 public subnets, 2 private subnets, NAT Gateway, and a private EC2 running Nginx
+Description: VPC with 2 public subnets and 2 private subnets, including a NAT Gateway, and a private EC2 instance running Nginx for WireGuard VPN connectivity testing via HTTP and ICMP ping.
 
 Parameters:
-  ResourcePrefix:
+  Prefix:
     Type: String
-    Default: "lab-cloudformation-"
-    Description: Prefix for all resource names
-
-  UbuntuLatestAmiId:
-    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Default: /aws/service/canonical/ubuntu/server/22.04/stable/current/amd64/hvm/ebs-gp2/ami-id
-    Description: Latest Ubuntu 22.04 LTS AMI
+    Default: ''
+    Description: "(Optional) Prefix for all AWS resource names created by this stack; if not empty, it must end with '-'."
+    AllowedPattern: '^$|.*-$'
+    ConstraintDescription: "Prefix must be empty or end with a '-'."
 
 Resources:
   # -----------------
@@ -24,14 +21,14 @@ Resources:
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}vpc"
+          Value: !Sub "${Prefix}vpc"
 
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}igw"
+          Value: !Sub "${Prefix}igw"
 
   AttachIGW:
     Type: AWS::EC2::VPCGatewayAttachment
@@ -48,7 +45,7 @@ Resources:
       AvailabilityZone: !Select [0, !GetAZs '']
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}public-subnet-1"
+          Value: !Sub "${Prefix}public-subnet-1"
 
   PublicSubnet2:
     Type: AWS::EC2::Subnet
@@ -59,7 +56,7 @@ Resources:
       AvailabilityZone: !Select [1, !GetAZs '']
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}public-subnet-2"
+          Value: !Sub "${Prefix}public-subnet-2"
 
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
@@ -70,7 +67,7 @@ Resources:
       AvailabilityZone: !Select [0, !GetAZs '']
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}private-subnet-1"
+          Value: !Sub "${Prefix}private-subnet-1"
 
   PrivateSubnet2:
     Type: AWS::EC2::Subnet
@@ -81,7 +78,7 @@ Resources:
       AvailabilityZone: !Select [1, !GetAZs '']
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}private-subnet-2"
+          Value: !Sub "${Prefix}private-subnet-2"
 
   # -----------------
   # Route Tables
@@ -92,7 +89,7 @@ Resources:
       VpcId: !Ref TestVpc
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}public-rt"
+          Value: !Sub "${Prefix}public-rt"
 
   PublicRoute:
     Type: AWS::EC2::Route
@@ -120,7 +117,7 @@ Resources:
       VpcId: !Ref TestVpc
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}private-rt"
+          Value: !Sub "${Prefix}private-rt"
 
   PrivateSubnet1RouteTableAssoc:
     Type: AWS::EC2::SubnetRouteTableAssociation
@@ -143,7 +140,7 @@ Resources:
       Domain: vpc
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}nat-eip"
+          Value: !Sub "${Prefix}nat-eip"
 
   NatGateway:
     Type: AWS::EC2::NatGateway
@@ -152,7 +149,7 @@ Resources:
       SubnetId: !Ref PublicSubnet1
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}nat-gw"
+          Value: !Sub "${Prefix}nat-gw"
 
   PrivateRouteToInternet:
     Type: AWS::EC2::Route
@@ -180,7 +177,7 @@ Resources:
           CidrIp: 10.0.0.0/16
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}private-sg"
+          Value: !Sub "${Prefix}private-sg"
 
   # -----------------
   # EC2 in Private Subnet
@@ -189,7 +186,7 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: t2.micro
-      ImageId: !Ref UbuntuLatestAmiId
+      ImageId: !Sub "{{resolve:ssm:/aws/service/canonical/ubuntu/server/22.04/stable/current/amd64/hvm/ebs-gp2/ami-id}}"
       NetworkInterfaces:
         - AssociatePublicIpAddress: false
           DeviceIndex: 0
@@ -201,12 +198,12 @@ Resources:
           #!/bin/bash
           apt-get update -y
           apt-get install -y nginx
-          echo "VPN test worked!" > /var/www/html/index.html
+          echo "WireGuard VPN test successful!" > /var/www/html/index.html
           systemctl enable nginx
           systemctl start nginx
       Tags:
         - Key: Name
-          Value: !Sub "${ResourcePrefix}private-ec2"
+          Value: !Sub "${Prefix}private-ec2"
     DependsOn: PrivateRouteToInternet
 
 Outputs:
